--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Presento Bootstrap Template</title>
+  <title>Portfolio Details - PeDev Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -29,8 +29,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Presento - v1.1.0
-  * Template URL: https://bootstrapmade.com/presento-bootstrap-corporate-template/
+  * Template Name: PeDev - v1.1.0
+  * Template URL: https://bootstrapmade.com/PeDev-bootstrap-corporate-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -43,13 +43,13 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-10 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html">Presento<span>.</span></a></h1>
+          <h1 class="logo mr-auto"><a href="index.html">PeDev<span>.</span></a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
           <nav class="nav-menu d-none d-lg-block">
             <ul>
-              <li class="active"><a href="#header">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
@@ -73,6 +73,7 @@
                 </ul>
               </li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="privacy.html">Privacy</a></li>
             </ul>
           </nav><!-- .nav-menu -->
 
@@ -141,7 +142,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Presento<span>.</span></h3>
+            <h3>PeDev<span>.</span></h3>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -189,13 +190,13 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Presento</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>PeDev</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/presento-bootstrap-corporate-template/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/PeDev-bootstrap-corporate-template/ -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
